# ImageProcessingProject

./: .gitignore  CMakeLists.txt
src/: main.cpp
